# py-casia-tool

./: README.md  pyproject.toml
src/py_casia_tool/: __init__.py  types.py
src/py_casia_tool/datasets/: __init__.py  dgrl.py  gnt.py
src/py_casia_tool/decoders/: dgrl.py  gnt.py
src/py_casia_tool/utils/: decorators.py  read_exactly.py
test_data/: 741-P14.dgrl  741-P15.dgrl  741-P16.dgrl  741-P17.dgrl  741-P18.dgrl
tests/: fake_data_generator.py  test_data.py  test_decorators.py  test_dgrl.py  test_dgrl_dataset.py  test_gnt.py  test_gnt_dataset.py
