[project]
name = "py-casia-tool"
version = "0.1.0"
description = "A tool for decoding CASIA dataset"
readme = "README.md"
authors = [{ name = "Zzy", email = "626106510@qq.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.5.1",
    "unstable>=0.5.1",
]
license = { text = "MIT" }

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pillow>=12.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]


# --- ruff ---
[tool.ruff]
target-version = "py312"
line-length = 120
